@@ -42,6 +42,7 @@ erp5_mysql_innodb/z_catalog_predicate_list
 erp5_mysql_innodb/z_catalog_quantity_unit_conversion_list
 erp5_mysql_innodb/z_catalog_roles_and_users_list
 erp5_mysql_innodb/z_catalog_stock_list
+erp5_mysql_innodb/z_catalog_stock_list_without_delete_for_inventory_virtual_movement
 erp5_mysql_innodb/z_catalog_subject_list
 erp5_mysql_innodb/z_catalog_transformation_list
 erp5_mysql_innodb/z_catalog_translation_list
